--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [semantic_release]
 version_variable = setup.py:VERSION
-commit_subject = "chore(release): v{version}"
+commit_subject = chore(release): v{version}
 branch = main
