--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,1 @@
-bleach==5.0.1
-certifi==2022.12.7
-charset-normalizer==2.1.1
-click==8.1.3
-click-log==0.4.0
-colorama==0.4.6
-docutils==0.19
-dotty-dict==1.3.1
-gitdb==4.0.10
-GitPython==3.1.30
-idna==3.4
-importlib-metadata==6.0.0
-invoke==1.7.3
-jaraco.classes==3.2.3
-keyring==23.13.1
-more-itertools==9.0.0
-packaging==23.0
-pkginfo==1.9.6
-Pygments==2.14.0
-python-gitlab==3.12.0
-python-semantic-release==7.32.2
-pywin32-ctypes==0.2.0
-readme-renderer==37.3
-requests==2.28.1
-requests-toolbelt==0.10.1
-rfc3986==2.0.0
-semver==2.13.0
-six==1.16.0
-smmap==5.0.0
-tomlkit==0.11.6
-tqdm==4.64.1
-twine==3.8.0
-urllib3==1.26.13
-webencodings==0.5.1
-zipp==3.11.0
+setuptools==65.7.0
