--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "python-simple-menu"
 version = "1.1.2"
-description = ""
+description = "Yet another simple console menu"
 authors = ["Chris Vann <chrisvann01@gmail.com>"]
 readme = "README.md"
+license = "MIT"
 packages = [{include = "python_simple_menu"}]
 
 [tool.poetry.dependencies]
