--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,8 @@ root = true
 indent_style = tab
 insert_final_newline = true
 charset = utf-8
+
+[*.{py,md}]
+indent_style = space
+indent_size = 4
+
