--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "python-simple-menu"
-version = "1.1.7"
+version = "1.1.15"
 description = "Yet another simple console menu"
 authors = ["Chris Vann <chrisvann01@gmail.com>"]
 readme = "README.md"
@@ -18,8 +18,11 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.semantic_release]
-version_toml = ["pyproject.toml:tool.poetry.version"]
 branch = "main"
-upload_to_pypi = false
-upload_to_release = true
+major_on_zero = false
+upload_to_release = false
+upload_to_repository = true
+patch_without_tag = true
+commit_subject = "chore(release): v{version}"
 build_command = "pip install poetry && poetry build"
+version_toml = ["pyproject.toml:tool.poetry.version"]
