--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.semantic_release]
 branch = "main"
 major_on_zero = false
-upload_to_PyPI = false
+upload_to_PyPI = true
 upload_to_release = false
 upload_to_repository = false
 build_command = "pip install poetry && poetry build"
