--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.semantic_release]
 branch = "main"
 major_on_zero = false
-upload_to_PyPI = true
 upload_to_release = false
-upload_to_repository = false
+upload_to_repository = true
 build_command = "pip install poetry && poetry build"
 version_toml = ["pyproject.toml:tool.poetry.version"]
